# hpc

./: .gitignore  README.md  bench_tutorial.md  cpu_bench.sh  env_prep.sh  plot_bench_results.py  run_bench.sh
KNN/: CMakeLists.txt  knn.cc  knn.h.in  test.cc
Knn/: knn  knn.cc
Tutorials/Cmake-Tutorial/Step1/: CMakeLists.txt  tutorial.cxx
Tutorials/OpenMP/: 4_pi_p_memSaving.cc  5_pi_1_to_parallel.cc
jacobi/: README.md
knn/: CMakeLists.txt  README.md  knn  knn.cc
openMP/: 3_pi_p_cacheline.cc  hello-world.cc  pi_linear.cc  pi_parallel_1st_simple.cc
tutorials/Cmake-Tutorial/Step1/: TutorialConfig.h.in
tutorials/OpenMP/: 1-2_pi.cc  1-2nd  2_pi_p.cc  linked.c  linked_original.c  linked_parallel_normal.c  linked_parallel_ugly.c  linked_pd.c  mandel.c  prod_cons_par.c  prod_cons_par_sinc.c  threadPrivateExample.c
tutorials/OpenMP/Notes/: Exercise-SharedVariables.txt
tutorials/OpenMP/exercise9/: pi_mc.c
